SigmaCodebackup3rdSep/objects/Stock_Moment_Product__c.object
<CustomObject>
    <fields>
        <fullName>Createdby_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Createdby_Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Difference_Quantity__c</fullName>
        <formula>Quantity_Out__c - Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_ILPLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From ILPLI</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Stock Movement Products (From ILPLI)</relationshipLabel>
        <relationshipName>Stock_Movement_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Location_Name__c</fullName>
        <formula>Stock_Movement__r.From_Location__r.Location__r.Name</formula>
        <label>From Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ILPLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TO ILPLI</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Moved_Location__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moved_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Moved Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Stock Movement Products (Moved Location)</relationshipLabel>
        <relationshipName>Stock_Movement_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moved_Quantity__c</fullName>
        <label>Moved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSN</label>
        <referenceTo>Product_Serial_Number__c</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Out__c</fullName>
        <label>Quantity Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Stock_Mismatch__c</fullName>
        <label>Reason for Stock Mismatch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Moment_Type__c</fullName>
        <formula>IF(ISPICKVAL(Stock_Movement__r.Stock_Movement_Type__c, &apos;IN&apos;), &apos;IN&apos;, 
IF(ISPICKVAL(Stock_Movement__r.Stock_Movement_Type__c, &apos;OUT&apos;), &apos;OUT&apos;, 
&apos;NA&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Moment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Movement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Movement</label>
        <referenceTo>StockMovement__c</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Stock Movement Products</relationshipLabel>
        <relationshipName>Stock_Movement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Stock Movement Products (To Location)</relationshipLabel>
        <relationshipName>Stock_Movement_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Locations__c</fullName>
        <formula>Moved_Location__r.Location__r.Name</formula>
        <label>To Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <label>Stock Movement Product</label>
    <nameField>
        <label>Stock Movement Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Movement Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>